--- a/src/main/resources/views/JavaQuiz.fxml
+++ b/src/main/resources/views/JavaQuiz.fxml
@@ -152,7 +152,7 @@
                <children>
                   <VBox alignment="TOP_CENTER" layoutX="1.0" prefHeight="680.0" prefWidth="820.0" spacing="40.0">
                      <children>
-                        <Label styleClass="title" text="ECQB Fragenkatalog PPL(A) and BZF" />
+                        <Label styleClass="title" text="ECQB Fragenkatalog PPL(A) und BZF" />
                         <VBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="140.0" spacing="10.0">
                            <children>
                               <JFXButton buttonType="RAISED" maxHeight="20" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#btnALW" styleClass="btn-choose" text="Luftrecht" />
